welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not enough arguments for method col1: (T: Array[java.awt.Color])Unit.
Unspecified value parameter T.
  col1()
      ^Array1:7: error: type mismatch;
 found   : Int
 required: Array[java.awt.Color]
    col(m,nbr)
        ^